# ludic

./: .commitsar.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  TAILWIND_CATALOG_SPECIFICATION.md  TAILWIND_INTEGRATION_ANALYSIS.md  ludicrous.pyi  mkdocs.yaml  perf_test.py  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
core/: base.rs  elements.rs  lib.rs
docs/: catalog.md  components.md  examples.md  getting-started.md  htmx.md  index.md  requirements.txt  styles.md  web-framework.md  web.md
examples/: README.md  __init__.py  bulk_update.py  click_to_edit.py  click_to_load.py  delete_row.py  edit_row.py  fastapi_example.py  infinite_scroll.py  lazy_loading.py  web.py
ludic/: __init__.py  attrs.py  base.py  components.py  elements.py  format.py  html.py  mypy_plugin.py  parsing.py  styles.py  types.py  utils.py
ludic/catalog/: __init__.py  buttons.py  forms.py  headers.py  icons.py  items.py  layouts.py  lists.py  loaders.py  messages.py  navigation.py  pages.py  quotes.py  styles.py  tables.py  typography.py  utils.py
ludic/contrib/django/: __init__.py  middlewares.py  responses.py
ludic/contrib/fastapi/: __init__.py  routing.py
ludic/starlette/: app.py  endpoints.py  response.py
ludic/styles/: __init__.py  collect.py  highlight.py  themes.py  types.py  utils.py
ludic/web/: __init__.py  app.py  datastructures.py  endpoints.py  exceptions.py  parsers.py  requests.py  response.py  responses.py  routing.py  utils.py
ludicrous/: __init__.py  __init__.pyi  base.py  base.pyi  html.pyi
pymx/components/: __init__.py  base.py
pymx/elements/: __init__.py  attrs.py  base.py  css.py  html.py  styles.py  utils.py
pymx/starlette/: __init__.py  app.py  endpoints.py  response.py
skills/ludic-components/: SKILL.md
skills/ludic-web/: SKILL.md
tests/: test_catalog.py  test_components.py  test_elements.py  test_examples.py  test_exceptions.py  test_formatting.py  test_methods.py  test_parsing.py  test_styles.py  test_themes.py  test_types.py  test_utils.py
tests/contrib/: test_django.py  test_fastapi.py
tests/styles/: __init__.py  test_styles.py  test_themes.py
tests/web/: test_app.py  test_datastructures.py  test_parsers.py  test_requests.py  test_responses.py  test_routing.py
