[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ludic"
dynamic = ["version"]
description = "Lightweight framework for building HTML pages in pure Python."
keywords = ["html", "htmx", "async", "web", "templating"]
authors = [{ name = "Pavel Dedík", email = "dedikx@gmail.com" }]
maintainers = [{ name = "Pavel Dedík", email = "dedikx@gmail.com" }]
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "typeguard>=4.1.5",
    "typing_extensions>=4.9.0",
]

[project.optional-dependencies]
full = [
    "starlette",
    "python-multipart>=0.0.9",
]
test = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # flake8 rules
    "F",     # flake8 rules
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "I",     # isort
    "D2",    # pydocstyle
    "C901",  # maccabe complexity
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "T10",   # flake8-debugger
]
ignore = [
    "B904",
    "S101",
    "D203",
    "D211",
    "D213",
    "UP040",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["ludic"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_subclassing_any = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
]
