[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ludic"
dynamic = ["version"]
description = "Lightweight framework for building dynamic HTML pages in pure Python."
keywords = ["html", "htmx", "async", "web", "templating"]
authors = [{ name = "Pavel Dedík", email = "dedikx@gmail.com" }]
maintainers = [{ name = "Pavel Dedík", email = "dedikx@gmail.com" }]
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "typing_extensions>=4.9.0",
]

[project.optional-dependencies]
full = [
    "python-multipart>=0.0.9",
    "starlette",
    "typeguard>=4.1.5",
    "pygments",
]
starlette = [
    "starlette",
]
django = [
    "django",
]
fastapi = [
    "fastapi",
]
dev = [
    "ludic[full,django,fastapi]",
    "mypy",
    "types-pygments",
    "django-stubs",
    "fastapi"
]
test = [
    "ludic[dev]",
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.hatch.envs.default]
python = "3.12"
platforms = ["linux", "macos"]
description = "Default environment with Python 3.12 for maximum compatibility"
features = ["dev", "full", "django", "test"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # flake8 rules
    "F",     # flake8 rules
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "I",     # isort
    "D2",    # pydocstyle
    "C901",  # maccabe complexity
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "T10",   # flake8-debugger
]
ignore = [
    "B008",
    "B904",
    "S101",
    "D203",
    "D211",
    "D213",
    "UP040",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["ludic"]
known-third-party = ["examples"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_subclassing_any = false
plugins = "ludic/mypy_plugin.py"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git docs .pytest_cache .mypy_cache .ruff_cache"
filterwarnings = [
    "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
]

[tool.coverage.run]
omit = ["tests/**"]

[tool.coverage.paths]
source = ["ludic", "examples"]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass"
]
